--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 3.0-COPYRIGHT - Added copyright notice and legal disclaimers -->
+<!-- Version: 3.1-RELEASE-DATE-SORTING - Improved release date sorting in all sort methods -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -920,7 +920,7 @@
           // Check for waiting service worker (already installed update)
           if (registration.waiting) {
             console.log('SW update available - forcing update');
-            if (confirm('🚀 新しいバージョンが利用可能です。モバイル版の問題を修正しました。ページを更新しますか？')) {
+            if (confirm('🚀 新しいバージョンが利用可能です。発売日順ソートが改善されました。ページを更新しますか？')) {
               registration.waiting.postMessage({type: 'SKIP_WAITING'});
               window.location.reload(true); // Force reload
             }
@@ -934,7 +934,7 @@
                 if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
                   // New content available - show notification
                   console.log('New SW installed, showing mobile update notification');
-                  if (confirm('🚀 新しいバージョンが利用可能です。モバイル版の問題を修正しました。ページを更新しますか？')) {
+                  if (confirm('🚀 新しいバージョンが利用可能です。発売日順ソートが改善されました。ページを更新しますか？')) {
                     newWorker.postMessage({type: 'SKIP_WAITING'});
                     window.location.reload(true); // Force reload
                   }
