--- a/card_list.html
+++ b/card_list.html
@@ -1176,7 +1176,7 @@
             newWorker.addEventListener('statechange', () => {
               if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
                 // New content available, reload the page
-                if (confirm('🚀 新しいバージョンが利用可能です。発売日順ソートが改善されました。ページを更新しますか？')) {
+                if (confirm('🚀 新しいバージョンが利用可能です。バージョン不一致の自動修復機能が追加されました。ページを更新しますか？')) {
                   // モバイル対応：強制的にキャッシュをクリアして更新
                   if (/Mobi|Android/i.test(navigator.userAgent)) {
                     caches.keys().then(cacheNames => {
