--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -401,7 +401,7 @@
           <button onclick="location.href='deck_builder.html'">⚔️ デッキ作成</button>
         </div>
         <h2 style="margin: 0;">カード詳細検索 
-          <span style="font-size: 12px; color: #999; font-weight: normal;">[v3.0-COPYRIGHT]</span>
+          <span style="font-size: 12px; color: #999; font-weight: normal;">[v3.1-RELEASE-DATE-SORTING]</span>
         </h2>
         <button onclick="toggleDarkMode()" style="padding: 2px 6px; font-size: 14px; min-width: auto; width: 28px; height: 28px;">🌗</button>
       </div>
