update: 3.6-CACHE-VERSION-CHECK

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 3.5-VERSION-MISMATCH-FIX - Auto-fix version mismatches and errors -->
+<!-- Version: 3.6-CACHE-VERSION-CHECK - Improved cache version checking and fix process -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -211,7 +211,7 @@
 <body>
   <div class="container">
     <h1>ホロライブカードゲーム<br>管理ツール
-      <span style="font-size: 0.4em; color: #999; display: block; margin-top: 5px; font-weight: normal;">[v3.5-VERSION-MISMATCH-FIX]</span>
+      <span style="font-size: 0.4em; color: #999; display: block; margin-top: 5px; font-weight: normal;">[v3.6-CACHE-VERSION-CHECK]</span>
     </h1>
 
     <div class="menu-grid">
@@ -392,7 +392,7 @@
         // 各ページのバージョンを確認
         const pageVersions = {};
         const pages = [
-          { name: 'index.html', expected: '3.5-VERSION-MISMATCH-FIX' },
+          { name: 'index.html', expected: '3.6-CACHE-VERSION-CHECK' },
           { name: 'card_list.html', expected: '3.1-RELEASE-DATE-SORTING' },
           { name: 'holoca_skill_page.html', expected: '3.1-RELEASE-DATE-SORTING' },
           { name: 'deck_builder.html', expected: '3.2-RELEASE-DATE-SORTING' }
