--- a/card_list.html
+++ b/card_list.html
@@ -582,7 +582,7 @@
   <div class="container">
     <div class="container-top">
       <h2>ホロライブカード一覧 
-        <span style="font-size: 12px; color: #999; font-weight: normal;">[v3.0-COPYRIGHT]</span>
+        <span style="font-size: 12px; color: #999; font-weight: normal;">[v3.1-RELEASE-DATE-SORTING]</span>
       </h2>
       
         <div class="top-nav">
