--- a/deck_builder.html
+++ b/deck_builder.html
@@ -415,7 +415,7 @@
         <button onclick="location.href='holoca_skill_page.html'">🗂 カード詳細検索</button>
       </div>
       <h2 class="deck-title">デッキ作成
-        <span style="font-size: 12px; color: #999; font-weight: normal; margin-left: 10px;">[v3.1-COPYRIGHT]</span>
+        <span style="font-size: 12px; color: #999; font-weight: normal; margin-left: 10px;">[v3.2-RELEASE-DATE-SORTING]</span>
       </h2>
       <button onclick="toggleDarkMode()">🌗</button>
     </div>
