--- a/deck_builder.html
+++ b/deck_builder.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 3.3-SORT-IMPROVEMENTS - Enhanced sorting with earliest release date logic and yell card prioritization -->
+<!-- Version: 3.4-SORT-PRIORITY-SIMPLIFIED - Simplified sorting priorities by removing 3rd level conditions -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -415,7 +415,7 @@
         <button onclick="location.href='holoca_skill_page.html'">🗂 カード詳細検索</button>
       </div>
       <h2 class="deck-title">デッキ作成
-        <span style="font-size: 12px; color: #999; font-weight: normal; margin-left: 10px;">[v3.3-SORT-IMPROVEMENTS]</span>
+        <span style="font-size: 12px; color: #999; font-weight: normal; margin-left: 10px;">[v3.4-SORT-PRIORITY-SIMPLIFIED]</span>
       </h2>
       <button onclick="toggleDarkMode()">🌗</button>
     </div>
