--- a/card_list.html
+++ b/card_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 3.2-SORT-IMPROVEMENTS - Enhanced sorting with earliest release date logic and yell card prioritization -->
+<!-- Version: 3.3-SORT-PRIORITY-SIMPLIFIED - Simplified sorting priorities by removing 3rd level conditions -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -582,7 +582,7 @@
   <div class="container">
     <div class="container-top">
       <h2>ホロライブカード一覧 
-        <span style="font-size: 12px; color: #999; font-weight: normal;">[v3.2-SORT-IMPROVEMENTS]</span>
+        <span style="font-size: 12px; color: #999; font-weight: normal;">[v3.3-SORT-PRIORITY-SIMPLIFIED]</span>
       </h2>
       
         <div class="top-nav">
