--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 3.2-SORT-IMPROVEMENTS - Enhanced sorting with earliest release date logic and yell card prioritization -->
+<!-- Version: 3.3-SORT-PRIORITY-SIMPLIFIED - Simplified sorting priorities by removing 3rd level conditions -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -401,7 +401,7 @@
           <button onclick="location.href='deck_builder.html'">⚔️ デッキ作成</button>
         </div>
         <h2 style="margin: 0;">カード詳細検索 
-          <span style="font-size: 12px; color: #999; font-weight: normal;">[v3.2-SORT-IMPROVEMENTS]</span>
+          <span style="font-size: 12px; color: #999; font-weight: normal;">[v3.3-SORT-PRIORITY-SIMPLIFIED]</span>
         </h2>
         <button onclick="toggleDarkMode()" style="padding: 2px 6px; font-size: 14px; min-width: auto; width: 28px; height: 28px;">🌗</button>
       </div>
