--- a/deck_builder.html
+++ b/deck_builder.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 3.4-SORT-PRIORITY-SIMPLIFIED - Simplified sorting priorities by removing 3rd level conditions -->
+<!-- Version: 3.5.0-CENTRALIZED-VERSION - Centralized version management system -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -1018,7 +1018,10 @@
               tag: !selectedTag || (card.tags && card.tags.includes(selectedTag)),
               cardType:
                 cardTypeFilters.length === 0 ||
-                cardTypeFilters.some(type => card.card_type?.includes(type)),
+                cardTypeFilters.some(type => {
+                  const typeParts = card.card_type?.split("・") ?? [];
+                  return typeParts.some(part => part.trim() === type);
+                }),
               keyword: keyword === "" || allText.includes(keyword)
             };
 
@@ -1291,7 +1294,7 @@
               newWorker.addEventListener('statechange', () => {
                 if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
                   // New content available, reload the page immediately
-                  console.log('🚀 強制更新: ソート機能が改善されました');
+                  console.log('🚀 強制更新: エールフィルター機能が修正されました');
                   // Clear all caches first
                   caches.keys().then(cacheNames => {
                     return Promise.all(cacheNames.map(cacheName => caches.delete(cacheName)));
