--- a/index.html
+++ b/index.html
@@ -550,11 +550,26 @@
               }
             }, 2000);
           } else {
-            statusEl.innerHTML = `✅ 最新バージョン v${versionCheckResult.currentAppVersion}<br><small>全ページのバージョンが最新です</small>`;
+            // 最新の場合、比較したバージョン情報を詳細表示
+            let versionDetails = `✅ 最新バージョン v${versionCheckResult.currentAppVersion}<br>`;
+            versionDetails += `<small>📊 チェック済みページ情報:<br>`;
+            versionDetails += `🕐 チェック時刻: ${new Date(versionCheckResult.timestamp).toLocaleString('ja-JP')}<br><br>`;
+            
+            if (versionCheckResult.allPages && versionCheckResult.allPages.length > 0) {
+              versionCheckResult.allPages.forEach(pageInfo => {
+                versionDetails += `📄 ${pageInfo.page}<br>`;
+                versionDetails += `&nbsp;&nbsp;└ バージョン: v${pageInfo.actualVersion || pageInfo.expectedVersion}<br>`;
+              });
+            } else {
+              versionDetails += `全ページのバージョンが最新です`;
+            }
+            versionDetails += `</small>`;
+            
+            statusEl.innerHTML = versionDetails;
             statusEl.style.color = '#4caf50';
             setTimeout(() => {
               statusEl.textContent = '';
-            }, 3000);
+            }, 5000); // 表示時間を延長
           }
         } else {
           statusEl.textContent = '⚠️ Service Worker が利用できません';
