--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <body>
   <div class="container">
     <h1>ホロライブカードゲーム<br>管理ツール
-      <span style="font-size: 0.4em; color: #999; display: block; margin-top: 5px; font-weight: normal;" id="versionDisplay">[v3.10.0-CENTRALIZED-VERSION]</span>
+      <span style="font-size: 0.4em; color: #999; display: block; margin-top: 5px; font-weight: normal;" id="versionDisplay">[v3.11.0-CENTRALIZED-VERSION]</span>
     </h1>
 
     <div class="menu-grid">
@@ -552,13 +552,18 @@
           } else {
             // 最新の場合、比較したバージョン情報を詳細表示
             let versionDetails = `✅ 最新バージョン v${versionCheckResult.currentAppVersion}<br>`;
-            versionDetails += `<small>📊 チェック済みページ情報:<br>`;
-            versionDetails += `🕐 チェック時刻: ${new Date(versionCheckResult.timestamp).toLocaleString('ja-JP')}<br><br>`;
+            versionDetails += `<small>📊 各ページのバージョン情報:<br><br>`;
             
             if (versionCheckResult.allPages && versionCheckResult.allPages.length > 0) {
               versionCheckResult.allPages.forEach(pageInfo => {
-                versionDetails += `📄 ${pageInfo.page}<br>`;
-                versionDetails += `&nbsp;&nbsp;└ バージョン: v${pageInfo.actualVersion || pageInfo.expectedVersion}<br>`;
+                const pageName = pageInfo.page.replace('.html', '');
+                const expectedV = pageInfo.expectedVersion;
+                const actualV = pageInfo.actualVersion;
+                const status = expectedV === actualV ? '✅' : '⚠️';
+                
+                versionDetails += `${status} ${pageName}<br>`;
+                versionDetails += `&nbsp;&nbsp;├ 最新: v${expectedV}<br>`;
+                versionDetails += `&nbsp;&nbsp;└ 現在: v${actualV}<br><br>`;
               });
             } else {
               versionDetails += `全ページのバージョンが最新です`;
@@ -569,7 +574,7 @@
             statusEl.style.color = '#4caf50';
             setTimeout(() => {
               statusEl.textContent = '';
-            }, 5000); // 表示時間を延長
+            }, 7000); // 表示時間を延長
           }
         } else {
           statusEl.textContent = '⚠️ Service Worker が利用できません';
