--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 3.7.0-CENTRALIZED-VERSION - Enhanced sorting with product filter consistency -->
+<!-- Version: 4.0.0-CENTRALIZED-VERSION - Unified version management and UI improvements -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
