--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 3.10.0-CENTRALIZED-VERSION - Targeted update for version mismatched pages only -->
+<!-- Version: 4.0.0-CENTRALIZED-VERSION - Major update with unified version management -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
