--- a/card_list.html
+++ b/card_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 3.8.0-CENTRALIZED-VERSION - Enhanced image modal with detailed card information display -->
+<!-- Version: 4.0.0-CENTRALIZED-VERSION - Modal image enhancement and unified version management -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
