add: collection_binder

--- a/deck_builder.html
+++ b/deck_builder.html
@@ -412,6 +412,7 @@
       <div>
         <button onclick="location.href='index.html'">🏠 ホーム</button>
         <button onclick="location.href='card_list.html'">🃏 カード一覧</button>
+        <button onclick="location.href='collection_binder.html'">🎴 バインダー</button>
         <button onclick="location.href='holoca_skill_page.html'">🗂 カード詳細検索</button>
       </div>
       <h2 class="deck-title">デッキ作成
