--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -398,6 +398,7 @@
         <div>
           <button onclick="location.href='index.html'">🏠 ホーム</button>
           <button onclick="location.href='card_list.html'">🃏 カード一覧</button>
+          <button onclick="location.href='collection_binder.html'">🎴 バインダー</button>
           <button onclick="location.href='deck_builder.html'">⚔️ デッキ作成</button>
         </div>
                 <h2 style="margin: 0;">カード詳細検索 
