--- a/index.html
+++ b/index.html
@@ -223,6 +223,14 @@
         </div>
       </a>
 
+      <a href="collection_binder.html" class="menu-card">
+        <span class="menu-icon">🎴</span>
+        <div class="menu-title">コレクションバインダー</div>
+        <div class="menu-description">
+          視覚的なバインダー形式でコレクションを管理。グリッド表示で所持状況を一目で確認できます。
+        </div>
+      </a>
+
       <a href="holoca_skill_page.html" class="menu-card">
         <span class="menu-icon">🗂️</span>
         <div class="menu-title">カード詳細検索</div>
