--- a/card_list.html
+++ b/card_list.html
@@ -726,6 +726,7 @@
       
         <div class="top-nav">
           <button onclick="location.href='index.html'">🏠 ホーム</button>
+          <button onclick="location.href='collection_binder.html'">🎴 バインダー</button>
           <button onclick="location.href='holoca_skill_page.html'">🗂 カード詳細検索</button>
           <button onclick="location.href='deck_builder.html'">⚔️ デッキ作成</button>
         </div>      <div class="top-controls">
