--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.0.0-CENTRALIZED-VERSION - Major update with unified version management -->
+<!-- Version: 4.2.0-BINDER-COLLECTION-UPDATE - Added binder collection management system -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -211,7 +211,7 @@
 <body>
   <div class="container">
     <h1>ホロライブカードゲーム<br>管理ツール
-      <span style="font-size: 0.4em; color: #999; display: block; margin-top: 5px; font-weight: normal;" id="versionDisplay">[v4.0.0-CENTRALIZED-VERSION]</span>
+      <span style="font-size: 0.4em; color: #999; display: block; margin-top: 5px; font-weight: normal;" id="versionDisplay">[v4.2.0-BINDER-COLLECTION-UPDATE]</span>
     </h1>
 
     <div class="menu-grid">
@@ -223,11 +223,11 @@
         </div>
       </a>
 
-      <a href="collection_binder.html" class="menu-card">
-        <span class="menu-icon">🎴</span>
-        <div class="menu-title">コレクションバインダー</div>
+      <a href="binder_collection.html" class="menu-card">
+        <span class="menu-icon">📚</span>
+        <div class="menu-title">バインダーコレクション</div>
         <div class="menu-description">
-          視覚的なバインダー形式でコレクションを管理。グリッド表示で所持状況を一目で確認できます。
+          複数のバインダーを管理。お気に入りの表紙画像を設定して、テーマ別にカードをコレクションできます。
         </div>
       </a>
 
