--- a/card_list.html
+++ b/card_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.1.0-CSV-ENHANCEMENT - CSV import/export functionality improvements -->
+<!-- Version: 4.1.1-CSV-ENHANCEMENT-UPDATE - CSV import/export functionality improvements with additional fixes -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -726,7 +726,7 @@
       
         <div class="top-nav">
           <button onclick="location.href='index.html'">🏠 ホーム</button>
-          <button onclick="location.href='collection_binder.html'">🎴 バインダー</button>
+          <button onclick="location.href='binder_collection.html'">🎴 バインダー</button>
           <button onclick="location.href='holoca_skill_page.html'">🗂 カード詳細検索</button>
           <button onclick="location.href='deck_builder.html'">⚔️ デッキ作成</button>
         </div>      <div class="top-controls">
