--- a/collection_binder.html
+++ b/collection_binder.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.3.7-MOBILE-MODAL-FIX - Fixed mobile modal layout, added product filter, and official card order sorting -->
+<!-- Version: 4.3.8-MOBILE-CARD-DISPLAY-FIX - Fixed mobile card selector display issues -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -996,8 +996,9 @@
       width: 100%;
       height: auto;
       aspect-ratio: 63/88;
-      object-fit: cover;
+      object-fit: contain;
       display: block;
+      background: #f0f0f0;
     }
 
     .card-info {
@@ -1121,22 +1122,36 @@
       }
 
       .card-grid {
-        grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-        gap: 10px;
-        padding: 15px;
+        grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
+        gap: 8px;
+        padding: 10px;
         max-height: 45vh;
       }
 
+      .card-item img {
+        aspect-ratio: 63/88;
+        object-fit: contain;
+        background: #f0f0f0;
+      }
+
       .card-info {
-        padding: 6px;
+        padding: 4px;
       }
 
       .card-info .name {
-        font-size: 0.75em;
+        font-size: 0.7em;
+        line-height: 1.1;
+        max-height: 2.2em;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
       }
 
       .card-info .rarity {
-        font-size: 0.65em;
+        font-size: 0.6em;
+        margin-top: 2px;
       }
 
       .modal-footer {
@@ -2131,7 +2146,9 @@
         cardItem.innerHTML = `
           <img src="${card.cardImageURL || './images/placeholder.png'}" 
                alt="${card.name}" 
-               onerror="this.src='./images/placeholder.png'">
+               loading="lazy"
+               onerror="this.onerror=null; this.src='./images/placeholder.png'; console.log('Image failed to load for card:', '${card.id}');"
+               onload="console.log('Image loaded successfully for card:', '${card.id}');">
           <div class="card-info">
             <div class="name">${card.name}</div>
             <div class="rarity rarity-${card.rarity || 'C'}">${card.rarity || 'C'}</div>
