update: 4.4.2-MODAL-PRODUCT-FILTER-FIX

--- a/collection_binder.html
+++ b/collection_binder.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.3.8-MOBILE-CARD-DISPLAY-FIX - Fixed mobile card selector display issues -->
+<!-- Version: 4.4.2-MODAL-PRODUCT-FILTER-FIX - Added independent product filter in card selection modal -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
