--- a/card_list.html
+++ b/card_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.1.1-CSV-ENHANCEMENT-UPDATE - CSV import/export functionality improvements with additional fixes -->
+<!-- Version: 4.5.0-SEARCH-NORMALIZATION - Search functionality improvements with hiragana/katakana normalization -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -1445,16 +1445,24 @@
     }, 100); // 100ms のデバウンス
   }
   
+  // テキスト正規化関数（ひらがな/カタカナ、大文字/小文字統一）
+  function normalizeText(text) {
+    return text
+      .toLowerCase()
+      .replace(/[ぁ-ゖ]/g, s => String.fromCharCode(s.charCodeAt(0) + 0x60))  // ひらがな→カタカナ変換
+      .replace(/[\u3041-\u3096]/g, s => String.fromCharCode(s.charCodeAt(0) + 0x60)); // 残りのひらがな→カタカナ
+  }
+  
   function performRender() {
-    const keyword = document.getElementById("nameSearch").value.toLowerCase();
+    const keyword = normalizeText(document.getElementById("nameSearch").value);
     const getChecked = id => [...document.querySelectorAll(`#${id} input:checked`)].map(el => el.value);
     const ownedStates = getCheckedFromChips("ownedStateChipGroup");
     const rarity = getCheckedFromChips("rarityFilter");
     const color = getCheckedFromChips("colorFilter");
     const bloom = getCheckedFromChips("bloomFilter");
     const cardType = getCheckedFromChips("cardTypeFilter");
-    const product = document.getElementById("productFilter").value.toLowerCase();
-    const tagFilter = document.getElementById("tagsFilter")?.value.toLowerCase() || "";
+    const product = normalizeText(document.getElementById("productFilter").value);
+    const tagFilter = normalizeText(document.getElementById("tagsFilter")?.value || "");
 
     const tableArea = document.getElementById("cardTable");
     const previewArea = document.getElementById("cardPreviewArea");
@@ -1468,13 +1476,13 @@
       if (!matchOwned) return false;
 
       const match = {
-        name: !keyword || card.name.toLowerCase().includes(keyword),
+        name: !keyword || normalizeText(card.name).includes(keyword),
         rarity: rarity.length === 0 || rarity.includes(card.rarity),
         color: color.length === 0 || color.includes(card.color),
         bloom: bloom.length === 0 || bloom.includes(card.bloom),
         cardType: cardType.length === 0 || cardType.some(type => card.card_type?.includes(type)),
-        product: !product || card.product.toLowerCase().includes(product),
-        tags: !tagFilter || (card.tags && Array.isArray(card.tags) && card.tags.map(t => t.toLowerCase()).includes(tagFilter))
+        product: !product || normalizeText(card.product).includes(product),
+        tags: !tagFilter || (card.tags && Array.isArray(card.tags) && card.tags.map(t => normalizeText(t)).includes(tagFilter))
       };
       return !Object.values(match).includes(false);
     });
