--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.2.0-BINDER-COLLECTION-UPDATE - Added binder collection management system -->
+<!-- Version: 4.5.0-BINDER-COLLECTION-UPDATE - Binder collection management system with modular structure -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
