--- a/binder_collection.html
+++ b/binder_collection.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.1.3-MOBILE-IMPROVEMENTS - Multiple binder management interface with mobile UI improvements -->
+<!-- Version: 4.2.0-CREATE-IMPROVEMENTS - Binder creation functionality improvements with image processing and error handling -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
