--- a/collection_binder.html
+++ b/collection_binder.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.4.3-VIEWMODE-PERSISTENCE - Added persistent view mode state saving -->
+<!-- Version: 4.5.0-DYNAMIC-CARDTYPE-FILTER - Dynamic card type filter generation and search normalization -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
