--- a/card_list.html
+++ b/card_list.html
@@ -2148,7 +2148,7 @@
   <p>このツールは株式会社カバーとは無関係の非公式ファンメイドツールです。</p>
   <p>カードデータの著作権は各権利者に帰属します。</p>
   <p>このツールの使用により生じた損害について、作成者は一切の責任を負いません。</p>
-  <p style="margin-top: 10px;">© 2025 Hololive Card Game Management Tool (非公式)</p>
+  <p style="margin-top: 10px;">© 2025 ikachan-desuyo - Hololive Card Game Management Tool (非公式)</p>
 </div>
 
 </body>
