--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     </div>
 
     <div class="footer">
-      <p>© 2025 Hololive Card Game Management Tool</p>
+      <p>© 2025 ikachan-desuyo - Hololive Card Game Management Tool</p>
       <p>このツールは非公式のファンメイドツールです</p>
       <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(0,0,0,0.1); font-size: 0.85em; color: #888; line-height: 1.4;">
         <p><strong>権利表記・免責事項</strong></p>
