--- a/collection_binder.html
+++ b/collection_binder.html
@@ -100,7 +100,7 @@
 
       <!-- バインダー管理ボタン -->
       <div style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap; margin-bottom: 15px;">
-        <button class="compact-btn" onclick="addNewPage()" title="新しいページを追加">➕ ページ追加</button>
+        <button class="compact-btn" onclick="addNewPage()" id="addPageBtn" title="新しいページを追加">➕ ページ追加</button>
         <button class="compact-btn" onclick="toggleViewMode()" id="viewModeBtn" title="閲覧/編集モード切替">👁️ 閲覧モード</button>
         <button class="compact-btn" onclick="clearAllCards()" id="clearBtn" title="全カードを削除" style="background: #f44336; color: white;">🗑️ 初期化</button>
       </div>
