--- a/binder_collection.html
+++ b/binder_collection.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <!-- Version: 4.2.0-CREATE-IMPROVEMENTS - Binder creation functionality improvements with image processing and error handling -->
 <head>
-  <meta charset="U            <input type="file" id="editCoverImageInput" accept="image/*" style="display: none;" onchange="handleEditCoverImageUpload(event)">F-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
@@ -129,7 +129,7 @@
 
         <div class="form-group">
           <label class="form-label">説明（任意）</label>
-          <textarea id="editBinderDescription" class="form-textarea" placeholder="バインダーの説明を入力（任意）" rows="3"></textarea>
+          <textarea id="editBinderDescription" class="form-textarea" placeholder="バインダーの説明を入力（任意）" rows="4" style="min-height: 100px; resize: vertical;"></textarea>
         </div>
 
         <div class="form-group">
@@ -186,7 +186,7 @@
               <div class="cover-text">クリックして画像を選択</div>
             </div>
           </div>
-          <input type="file" id="editCoverImageInput" accept="image/*" style="display: none;">
+          <input type="file" id="editCoverImageInput" accept="image/*" style="display: none;" onchange="handleEditCoverImageUpload(event)">
           <button type="button" class="remove-cover-btn" id="editRemoveCoverBtn" onclick="removeEditCover()" style="display: none;">画像を削除</button>
         </div>
 
@@ -757,6 +757,46 @@
       placeholder.style.display = 'flex';
       removeBtn.style.display = 'none';
       document.getElementById('editCoverImageInput').value = '';
+    }
+
+    // 編集用表紙画像のアップロード処理
+    function handleEditCoverImageUpload(event) {
+      const file = event.target.files[0];
+      if (!file) return;
+
+      // ファイルサイズチェック（5MB以下）
+      if (file.size > 5 * 1024 * 1024) {
+        alert('ファイルサイズが大きすぎます。5MB以下のファイルを選択してください。');
+        event.target.value = '';
+        return;
+      }
+
+      // ファイル形式チェック
+      if (!file.type.startsWith('image/')) {
+        alert('画像ファイルを選択してください。');
+        event.target.value = '';
+        return;
+      }
+
+      const reader = new FileReader();
+      reader.onload = function(e) {
+        try {
+          const previewImage = document.getElementById('editCoverPreviewImage');
+          const preview = document.getElementById('editCoverPreview');
+          const placeholder = document.getElementById('editCoverPlaceholder');
+          const removeBtn = document.getElementById('editRemoveCoverBtn');
+
+          previewImage.src = e.target.result;
+          preview.style.display = 'block';
+          placeholder.style.display = 'none';
+          removeBtn.style.display = 'block';
+        } catch (error) {
+          console.error('画像プレビューエラー:', error);
+          alert('画像の読み込み中にエラーが発生しました。');
+          resetEditCoverPreview();
+        }
+      };
+      reader.readAsDataURL(file);
     }
 
     // 編集用表紙画像の削除
